Added train.py scripy, created modules in a package helpful to preprocess the input data & train the model

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -44,6 +44,9 @@
     "from sklearn import preprocessing as sk_preprocessing\n",
     "import re\n",
     "from tensorflow.keras import preprocessing as t_preprocessing\n",
+    "from tensorflow.keras import Model, Sequential\n",
+    "from tensorflow.keras import layers\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
     "matplotlib.style.use('ggplot')"
@@ -396,12 +399,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras import Model, Sequential\n",
-    "from tensorflow.keras import layers\n",
+    "\n",
     "\n",
     "NUM_WORDS = 8000\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split"
+    "\n"
    ]
   },
   {
